--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </div>
             <div class="header-right">
                 <ul>
-                    <li><a href="#" class="navbar">Paket</a></li>
-                    <li><a href="#" class="navbar">About Us</a></li>
+                    <li><a href="#package-wrapper" class="navbar">Paket</a></li>
+                    <li><a href="#about-us" class="navbar">About Us</a></li>
                     <li><a href="#" class="btn-blu">Masuk</a></li>
                 </ul>
             </div>
@@ -31,11 +31,11 @@
             <h1>Jelajahi Dunia Yang Indah</h1>
             <h1>Dengan Satu Sentuhan</h1>
             <div class="btn-wrapper">
-                <a href="#" class="btn lets">Let's Go</a>
+                <a href="#category" class="btn lets">Let's Go</a>
             </div>
         </div>
     </div>
-    <div class="package-wrapper">
+    <div class="package-wrapper" id="package-wrapper">
         <div class="container">
             <div class="heading">
                 <h3>Paket Liburan Populer</h3>
@@ -102,7 +102,7 @@
         </div>
     </div>
     
-    <div class="category">
+    <div class="category" id="category">
         <div class="container">
             <div class="heading">
                 <h2>Kategori Tempat</h2>
@@ -135,7 +135,7 @@
             </div>
         </div>
     </div>
-    <div class="about-us">
+    <div class="about-us" id="about-us">
         <div class="container">
             <div class="heading">
                 <h2>About Us</h2>
